# Dockerised-Local-postgresDB-and-FastAPI

./: compose.yml
todo/: .env  Dockerfile  pyproject.toml
todo/src/: main.py  settings.py
