[tool.poetry]
name = "src"
version = "0.1.0"
description = ""
authors = ["Asad Subhani <asadsubhani77@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.111.0"
sqlmodel = "^0.0.18"
uvicorn = {extras = ["standard"], version = "^0.29.0"}
psycopg = {extras = ["binary"], version = "^3.1.18"}
psycopg2 = "^2.9.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
